# Mastered

./: .gitignore  API_REFERENCE.md  CMakeLists.txt  MATHEMATICS.md  QUICKSTART.md  README.md  build.sh  generate_test_audio.py  master.sh  result2.json
include/: audio_loader.h  eq_calculator.h  fft_analyzer.h  mastering_engine.h  spectrum_matcher.h
src/: audio_loader.cpp  eq_calculator.cpp  fft_analyzer.cpp  main.cpp  mastering_engine.cpp  spectrum_matcher.cpp
